{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "movement",
            "id": "e736b1b5-b3e4-4bb2-b148-b887dd71ed39",
            "actions": [
                {
                    "name": "KB",
                    "type": "Value",
                    "id": "a9e4b0e7-6e54-4298-809c-cdfb0b4cc9f5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "fc06eb49-58a5-4c52-90bd-e87708f39ec8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "488515f1-6e0b-4f1a-b8db-c979e4fd2084",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ec227c72-febf-4204-891c-5dbe44c48b2c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "dc8a378b-ef1b-45e9-ae06-4ed073d4d7e7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f1533c9c-ea98-40d0-b9bb-6e49e08cbfbf",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KB",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}